--- a/_includes/css/landing-hero.css
+++ b/_includes/css/landing-hero.css
@@ -11,7 +11,6 @@
   --background-color: #fff8ea;
   --background-gradient: linear-gradient(#edf9ff, #cbffff);
 }
-
 h1,
 h2,
 h3,
@@ -82,11 +81,11 @@ nav {
 .nav-container {
   min-height: 10vh;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-areas: "nav-banner . nav-links";
 }
 .grid-nav-item {
-  padding: 2rem;
+  padding: 1.5rem;
 }
 .grid-nav-item.banner {
   grid-area: nav-banner;
